# rust_learn

./: .gitignore  LICENSE
.github/workflows/: build.yml
01_stack_heap/src/: error.rs  pointer.rs  strings.rs
02_concepts/src/: main.rs
03_grammar/chatroom/: Cargo.toml
03_grammar/chatroom/src/: main.rs
03_grammar/concepts/: Cargo.toml
03_grammar/concepts/src/: fib.rs
03_grammar/scrape_url/: Cargo.toml
03_grammar/scrape_url/src/: main.rs
04_httpie/: Cargo.toml
04_httpie/src/: main.rs
05_thumbor/: abi.proto  build.rs
05_thumbor/src/: main.rs
05_thumbor/src/engine/: mod.rs  photon.rs
05_thumbor/src/pb/: abi.rs  mod.rs
06_queryer/queryer-js/: Cargo.toml
06_queryer/queryer-js/src/: lib.rs
06_queryer/queryer-py/: Cargo.toml
06_queryer/queryer-py/src/: lib.rs
06_queryer/queryer/examples/: covid.rs
06_queryer/queryer/src/: convert.rs  fetcher.rs  lib.rs  loader.rs
07_ownership/: Cargo.toml
08_borrow/src/: main.rs
09_multi_owner/: Cargo.toml
09_multi_owner/src/: dag.rs  dag_mut.rs
10_lifetime/: Cargo.toml
10_lifetime/src/: lifetime.rs  lifetime1.rs  strtok.rs
11_memory/examples/: size.rs
12_type_system/: Cargo.toml
12_type_system/src/: writer.rs  writer1.rs  writer2.rs  writer3.rs
13_traits/: Cargo.toml
13_traits/src/: animal.rs  complex.rs  formatter.rs  iterator.rs  parse.rs  parse1.rs  parse2.rs  write.rs
14_sys_traits/: Cargo.toml
14_sys_traits/src/: convert.rs  copy_drop.rs  default.rs  deref.rs  linked_list.rs  send_sync.rs
15_smart_pointers/: Cargo.toml
15_smart_pointers/src/: allocator.rs  cow1.rs  cow2.rs  guard.rs  mystring.rs
16_data_structure/: Cargo.toml
16_data_structure/src/: iter_ext.rs  slice1.rs
17_hash_table/: Cargo.toml
17_hash_table/src/: hash.rs  hashmap1.rs  hashmap2.rs
19_closure/: Cargo.toml
19_closure/src/: closure.rs  fn.rs  fnmut.rs
20_kv/: Cargo.toml
20_kv/examples/: client.rs
20_kv/src/: error.rs
20_kv/src/pb/: abi.rs
20_kv/src/service/: command_service.rs  mod.rs
21_kv/: build.rs
21_kv/examples/: dummy_server.rs  server.rs
21_kv/src/pb/: mod.rs
21_kv/src/service/: command_service.rs  mod.rs
21_kv/src/storage/: memory.rs  mod.rs
22_advanecd_generics/: Cargo.toml
22_advanecd_generics/src/: auth.rs  identifier.rs  iterator.rs
23_advanced_trait_objects/: Cargo.toml
23_advanced_trait_objects/src/: trait_object_in_fn.rs
26_kv/: Cargo.toml  abi.proto
26_kv/examples/: dummy_server.rs  server.rs  server_with_sled.rs
26_kv/src/: error.rs
26_kv/src/pb/: mod.rs
26_kv/src/service/: mod.rs
26_kv/src/storage/: memory.rs  mod.rs  sleddb.rs
28_network/: Cargo.toml
28_network/examples/: client.rs  server.rs
31_ffi/bzlib-sys/: build.rs
31_ffi/bzlib-sys/src/: bindings.rs  lib.rs
31_ffi/ffi/: Cargo.toml  bindings.h  build.rs
31_ffi/ffi/src/: lib.rs
32_xunmi_py/: Cargo.toml  build.rs
32_xunmi_py/src/: lib.rs
33_concurrency/: Cargo.toml
33_concurrency/examples/: actor.rs  condvar.rs  metrics.rs
35_con_utils/: Cargo.toml
35_con_utils/src/: channel.rs
36_kv/: Cargo.toml
36_kv/examples/: dummy_server.rs  server.rs  server_with_codec.rs  server_with_sled.rs
36_kv/src/: client.rs  server.rs
36_kv/src/network/: mod.rs
36_kv/src/pb/: mod.rs
36_kv/src/service/: command_service.rs  mod.rs
36_kv/src/storage/: mod.rs
37_kv/: Cargo.toml
37_kv/examples/: dummy_server.rs  gen_cert.rs  server.rs  server_with_codec.rs  server_with_sled.rs
37_kv/fixtures/: client.cert  client.key  server.key
37_kv/src/: client.rs  server.rs
37_kv/src/network/: mod.rs  tls.rs
37_kv/src/pb/: mod.rs
38_async/: Cargo.toml
38_async/examples/: async_io.rs  pow.rs  sync_io.rs  thread_io.rs
39_async_internals/: Cargo.toml
39_async_internals/examples/: self_ref.rs  self_ref1.rs
40_async_stream/: Cargo.toml  hello.tmp
40_async_stream/examples/: async_read.rs  fibonacci.rs  readline.rs  sink.rs  sink_file.rs  yamux_client.rs  yamux_server.rs
41_kv/: Cargo.toml
41_kv/examples/: dummy_server.rs  gen_cert.rs  server.rs  server_with_codec.rs  server_with_sled.rs
41_kv/fixtures/: server.cert
41_kv/src/: client.rs  error.rs  server.rs
41_kv/src/network/: frame.rs  mod.rs  stream.rs  tls.rs
41_kv/src/pb/: abi.rs
41_kv/src/service/: command_service.rs
41_kv/src/storage/: mod.rs
42_kv/: Cargo.toml
42_kv/examples/: dummy_server.rs  server.rs  server_with_codec.rs  server_with_sled.rs
42_kv/fixtures/: ca.cert
42_kv/src/: client.rs  error.rs  server.rs
42_kv/src/network/: frame.rs  mod.rs  multiplex.rs  stream_result.rs  tls.rs
42_kv/src/service/: mod.rs  topic.rs  topic_service.rs
42_kv/src/storage/: sleddb.rs
44_data_processing/: Cargo.toml
44_data_processing/data/: example.db-shm  example.db-wal
44_data_processing/examples/: log.rs  user.rs
46_kv/: Cargo.toml  abi.proto
46_kv/benches/: pubsub.rs
46_kv/examples/: dummy_server.rs  gen_config.rs  server.rs  server_with_codec.rs  server_with_sled.rs
46_kv/fixtures/: ca.key  client.conf  server.conf
46_kv/src/: client.rs  config.rs  error.rs  lib.rs  server.rs
46_kv/src/network/: mod.rs  multiplex.rs  stream.rs  tls.rs
46_kv/src/pb/: abi.rs  mod.rs
46_kv/src/service/: command_service.rs  mod.rs  topic.rs
46_kv/src/storage/: mod.rs
46_kv/tests/: server.rs
47_48_macros/: Cargo.toml
47_48_macros/examples/: command.rs  query.rs  rule.rs
47_48_macros/src/: builder.rs  lib.rs  raw_builder.rs
queryer/: Cargo.toml
queryer/examples/: covid.rs  dialect.rs
queryer/src/: convert.rs  dialect.rs  lib.rs
rgrep/: Cargo.toml
rgrep/src/: lib.rs  main.rs
