[package]
name = "lifetime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lifetime"
path = "src/lifetime.rs"

[[bin]]
name = "lifetime1"
path = "src/lifetime1.rs"

[[bin]]
name = "strtok"
path = "src/strtok.rs"

[dependencies]
