[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1" # 高效处理网络buffer的库
dashmap = "5.2.0" # 并发HashMap
http =  "0.2" # 我们使用HTTP status code，所以引入这个类型库
prost = "0.9" # 处理protobuf代码
thiserror = "1" # 错误定义和处理
tracing = "0.1" #日志处理

[dev-dependencies]
anyhow = "1" # 错误处理
async-prost = "0.3" # 支持把protobuf封装成TCP frame
futures = "0.3" # 提供Steam trait
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net"]} # 异步网络库
tracing-subscriber = "0.3" # 日志处理

[build-dependencies]
prost-build = "0.10.1" # 编译protobuf